# opengl_learning

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
include/common/: containment.hxx  half_edge.hxx  intersector.hxx  mesh_model.hxx  point.hxx  polygon.hxx  shader.hxx
include/common/camera/: camera.hxx
include/common/constructor/: constructor.hxx
include/common/io/: model_io.h  render_output.h
include/common/math/: aabb.hxx  interval.hxx  vector_field.hxx
include/common/object/: mirror.h
include/common/ray_tracing/: ray.h  ray_tracing.h
include/common/simulation/: solid_entity.hxx
include/common/skybox/: skybox.h
include/common/transformation/: transf.hxx
include/glad/: glad.h
src/clipping/: CMakeLists.txt  clipping.cpp  clipping.hxx  main.cpp
src/clipping/shader/: green.fs  simple.vs
src/common/: CMakeLists.txt  containment.cpp  intersector.cpp  mesh_model.cpp  point.cpp  polygon.cpp  shader.cpp
src/common/camera/: camera.cpp
src/common/constructor/: constructor.cpp
src/common/io/: model_io.cpp  render_output.cpp
src/common/math/: aabb.cpp  interval.cpp  vector_field.cpp
src/common/object/: mirror.cpp
src/common/ray_tracing/: ray.cpp  ray_tracing.cpp
src/common/simulation/: solid_entity.cpp
src/glad/: glad.c
src/ray_tracing/: CMakeLists.txt  main.cpp
src/ray_tracing/shader/: filter.fs  lighting.fs  lighting.vs
src/scene/: CMakeLists.txt  main.cpp
src/scene/shader/: lighting.fs  lighting.vs  simple.vs
